Fixed some layout bugs.

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,4 @@
-header {
+.header {
   position: fixed;
   top: 0;
   left: 0;
@@ -14,7 +14,7 @@ header .block {
   position: relative;
   width: 100vw;
   background-color: #fff;
-  padding: 5px 10px 0;
+  padding-top: 5px;
 }
 
 header .block img {
